--- a/src/com/view/vehicle/EditVehicleForm.form
+++ b/src/com/view/vehicle/EditVehicleForm.form
@@ -44,13 +44,13 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Component id="jLabel1" alignment="0" max="32767" attributes="0"/>
-              <Group type="102" attributes="0">
+              <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
                           <Component id="jLabel2" min="-2" pref="150" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="kodeDriverTextField" max="32767" attributes="0"/>
+                          <Component id="nopolTextField" max="32767" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
                           <Component id="jLabel3" min="-2" pref="150" max="-2" attributes="0"/>
@@ -60,13 +60,13 @@
                                   <EmptySpace min="-2" pref="153" max="-2" attributes="0"/>
                                   <Component id="submitBtn" max="32767" attributes="0"/>
                               </Group>
-                              <Component id="namaDriverTextField" alignment="0" max="32767" attributes="0"/>
+                              <Component id="namaVehicleTextField" alignment="0" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
                           <Component id="jLabel4" min="-2" pref="150" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="phoneNumDriverTextField" max="32767" attributes="0"/>
+                          <Component id="tipeVehicleTextField" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
@@ -80,18 +80,18 @@
                   <Component id="jLabel1" min="-2" pref="35" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="kodeDriverTextField" alignment="0" max="32767" attributes="0"/>
+                      <Component id="nopolTextField" alignment="0" max="32767" attributes="0"/>
                       <Component id="jLabel2" alignment="0" pref="35" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="13" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel3" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
-                      <Component id="namaDriverTextField" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
+                      <Component id="namaVehicleTextField" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel4" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
-                      <Component id="phoneNumDriverTextField" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
+                      <Component id="tipeVehicleTextField" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="70" max="-2" attributes="0"/>
                   <Component id="submitBtn" max="32767" attributes="0"/>
@@ -101,7 +101,7 @@
         </DimensionLayout>
       </Layout>
       <SubComponents>
-        <Component class="javax.swing.JTextField" name="kodeDriverTextField">
+        <Component class="javax.swing.JTextField" name="nopolTextField">
           <Properties>
             <Property name="editable" type="boolean" value="false"/>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
@@ -115,7 +115,7 @@
               <Font name="Circular Std Black" size="24" style="0"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="0"/>
-            <Property name="text" type="java.lang.String" value="Edit Driver Information"/>
+            <Property name="text" type="java.lang.String" value="Edit Vehicle Information"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel2">
@@ -123,7 +123,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Corbel" size="18" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Kode Driver"/>
+            <Property name="text" type="java.lang.String" value="Nomor Polisi"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel3">
@@ -131,10 +131,10 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Corbel" size="18" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Nama Driver"/>
+            <Property name="text" type="java.lang.String" value="Nama Kendaraan"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="namaDriverTextField">
+        <Component class="javax.swing.JTextField" name="namaVehicleTextField">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Corbel" size="14" style="0"/>
@@ -163,10 +163,10 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Corbel" size="18" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Nomor Telpon"/>
+            <Property name="text" type="java.lang.String" value="Tipe Kendaraan"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="phoneNumDriverTextField">
+        <Component class="javax.swing.JTextField" name="tipeVehicleTextField">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Corbel" size="14" style="0"/>
